fix: more spacing to answer elements on result page

--- a/source/ui/quiz-done/quizDone.module.scss
+++ b/source/ui/quiz-done/quizDone.module.scss
@@ -126,11 +126,24 @@ $head-height: calc(50vh - #{$padding} * 2);
 }
 
 .answer {
+    $margin: px(30);
+    position: relative;
     display: flex;
     flex-direction: row;
     align-items: center;
     gap: px(20);
-    margin: px(20) 0;
+    margin: $margin 0;
+
+    &:not(:last-of-type)::after {
+        position: absolute;
+        content: '';
+        top: calc(100% + #{$margin} / 2);
+        left: 50%;
+        transform: translateX(-50%);
+        width: 100%;
+        height: px(1);
+        background-color: #e0e0e0;
+    }
 
     &Icon {
         $size: px(85);
